# local-disc

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
cpp_core/: CMakeLists.txt  Config.cmake.in
cpp_core/include/local_disc/: api.h
cpp_core/src/: api.cpp  engine.cpp
